--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/f30d40df6a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -59,7 +60,154 @@
                 </tr>
             </table>
         </section>
+        <section class="what-i-do">
+            <h2 class="what-i-do-title">What I do</h2>
+            <p class="what-i-do-description">I have more than 10 years experience building software for clients all over
+                the world. Below is a quick
+                overview of my main technical skill sets and technologies i use. Want to find out more about my
+                experience? Check out my online resume and project portfolio.</p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.js
+                    </p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    </p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+        <section class="resume">
+            <h2 class="resume-header">A summary of My Resume</h2>
+            <div class="resume-content">
+                <div>
+                    <h3 class="resume-title">
+                        My Education
+                    </h3>
+                    <div class="resume-item">
+
+                        <h4 class="resume-item-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-item-subtitle">
+                            Harvard University / 2015 - 2017
+                        </h5>
+                        <p class="resume-item-details">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                    <div class="resume-item">
+
+                        <h4 class="resume-item-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-item-subtitle">
+                            Harvard University / 2015 - 2017
+                        </h5>
+                        <p class="resume-item-details">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                    <div class="resume-item">
+
+                        <h4 class="resume-item-title">Master in Computer Engineering</h4>
+                        <h5 class="resume-item-subtitle">
+                            Harvard University / 2015 - 2017
+                        </h5>
+                        <p class="resume-item-details">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+
+
+                </div>
+                <div>
+                    <h3 class="resume-title">
+                        My Experience
+                    </h3>
+                    <div class="resume-item">
+
+                        <h4 class="resume-item-title">Sr. Font End Developer</h4>
+                        <h5 class="resume-item-subtitle">
+                            Apple Inc / 2020 - Current
+                        </h5>
+                        <p class="resume-item-details">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                    <div class="resume-item">
+
+                        <h4 class="resume-item-title">Jr. Font End Developer</h4>
+                        <h5 class="resume-item-subtitle">
+                            Dribbble Inc / 2018 - 2022
+                        </h5>
+                        <p class="resume-item-details">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                    <div class="resume-item">
+
+                        <h4 class="resume-item-title">HTML Developer</h4>
+                        <h5 class="resume-item-subtitle">
+                            Adobe Inc / 2017 - 2018
+                        </h5>
+                        <p class="resume-item-details">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="resume-btn">
+                <button class="btn-primary">Download CV</button>
+            </div>
+        </section>
+
     </main>
+    <footer>
+        <section class="contact">
+            <div class="contact-info">
+                <h2 class="contact-title">Lets Connect</h2>
+                <p class="contact-description">Please fill out the form on this section to contact with me or call
+                    between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <div class="social-div">
+                    <a href=""><i class=" text-primary fa-brands fa-facebook-f"></i></a>
+                    <a href=""><i class="text-primary fa-brands fa-twitter"></i></a>
+                    <a href=""><i class=" text-primary fa-brands fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="contact-form">
+                <h2 class="contact-title">
+                    Let's Message me
+                </h2>
+                <form>
+                    <input type="text" name="name" placeholder="Enter your name">
+                    <input type="email" name="email" placeholder="Enter your email">
+                    <textarea name="comment" id="" cols="30" rows="5" placeholder="Message"></textarea>
+                    <input class="btn-primary" type="submit" value="Submit">
+                </form>
+            </div>
+        </section>
+    </footer>
 
 </body>
 
