--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly<br> he.
                     Morning because as to society
                     behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class=" fa-solid fa-download"></i><span class='margin-left'>Download
+                        CV</span></button>
+                <button class="btn-phone"><i class="fa-solid fa-phone"></i><span
+                        class='margin-left'>Contact</span></button>
             </div>
             <div class="banner-img">
                 <img src="images/hardy.png" alt="">
